feat : 교육과목, 고객센터 (작업중)

--- a/src/assets/scss/_partial/_apply_class.scss
+++ b/src/assets/scss/_partial/_apply_class.scss
@@ -1,11 +1,14 @@
 .apply-class{
-  img{
-    width: 100%;
-  }
-  ul>li{
-    a{
-      display: block;
-      line-height: 0;
+  .banners{
+    margin-top: 20px;
+    img{
+      width: 100%;
+    }
+    ul>li{
+      a{
+        display: block;
+        line-height: 0;
+      }
     }
   }
 }
