--- a/src/assets/scss/_partial/_icon.scss
+++ b/src/assets/scss/_partial/_icon.scss
@@ -3,3 +3,8 @@
   background-repeat: no-repeat;
   background-size: contain;
 }
+.icon-list{
+  background-image: url('../../image/icon_list.png');
+  width: 15px;
+  height: 15px;
+}
