--- a/src/assets/scss/_partial/_variables.scss
+++ b/src/assets/scss/_partial/_variables.scss
@@ -2,16 +2,17 @@ $containerWidth : 1200px;
 $gnbHeight: 90px;
 $navHeight: 64px;
 
+$tableOutBorderColor: #181818;
 $tableBorderColor: #d3d3d3;
 $tablethBg: #f0f0f0;
-$tableTdHeight: 45px;
+$tableTdHeight: 30px;
 
 $boxBorderColor: #d0d0d0;
 
-$primary: #259bff;
+$primary: #0047af;
 $green: #00aa0f;
 $yellow: #f1db00;
 $red: #d70000;
-$darkBlue: #173c7f;
+$darkBlue: #082361;
 $defaultFontColor: #181818;
 $primaryFontColor: $primary;
