--- a/src/assets/scss/_partial/_input.scss
+++ b/src/assets/scss/_partial/_input.scss
@@ -1,9 +1,9 @@
-input{
+input {
   box-sizing: border-box;
   &[type="text"],
   &[type="number"],
-  &[type="password"]{
-    &.default-input{
+  &[type="password"] {
+    &.default-input {
       background-color: #ffffff;
       border: 1px solid #e7e7e7;
       border-radius: 5px;
@@ -12,28 +12,37 @@ input{
       padding: 10px;
     }
   }
-  &.input-sm{
+  &.input-sm {
     width: 80px;
   }
-  &.input-md{
-    width: 300px;
-  }
-  &.input-lg{
-    width: 550px;
+  &.with-button{
+    width: calc(100% - 85px);
+    margin-right: 5px;
   }
 }
-.input-wrap{
-  &.search{
-    input{ 
-        background-image: url('../../image/search_icon.png');
-        background-size: 20px;
-        background-position: center right 10px;
-        background-repeat: no-repeat;
-        padding-right: 35px;
+input[type="file"]{
+  &.default-input {
+    width: 100%;
+    background-color: #ffffff;
+    border: 1px solid #e7e7e7;
+    border-radius: 5px;
+    // height: 32px;
+    font-size: 15px;
+    // padding: 10px;
+  }
+}
+.input-wrap {
+  &.search {
+    input {
+      background-image: url("../../image/search_icon.png");
+      background-size: 20px;
+      background-position: center right 10px;
+      background-repeat: no-repeat;
+      padding-right: 35px;
     }
   }
 }
-select.default-input{
+select.default-input {
   background-color: #ffffff;
   border: 1px solid #e7e7e7;
   border-radius: 5px;
@@ -41,8 +50,8 @@ select.default-input{
   font-size: 15px;
   padding: 10px;
 }
-.cell-phone{
-  input{
+.cell-phone {
+  input {
     text-align: center;
   }
 }
