--- a/src/assets/scss/_partial/_layout.scss
+++ b/src/assets/scss/_partial/_layout.scss
@@ -1,20 +1,12 @@
-.sub-visual-wrap{
-  img{
-    width: 100%;
-    height: 200px;
-    min-width: 1240px;
-    object-fit: cover;
-  }
-}
 .content-container{
-  width: $containerWidth;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 15px;
   margin-bottom: 100px;
   h2{
-    font-size: 30px;
+    font-size: 20px;
     text-align: center;
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 25px;
   }
   .header-group{
     position: relative;
@@ -29,13 +21,13 @@
     }
   }
   h3{
-    font-size: 26px;
+    font-size: 18px;
     text-align: center;
-    margin: 52px auto 34px;
-    color: #181818;
+    margin-top: 20px;
+    margin-bottom: 12px;
   }
   h4{
-    font-size: 18px;
-    margin-bottom: 15px;
+    font-size: 15px;
+    margin: 0;
   }
 }
