--- a/src/assets/scss/_partial/_tab.scss
+++ b/src/assets/scss/_partial/_tab.scss
@@ -12,18 +12,20 @@
     }
     a{
       display: flex;
-      height: 65px;
+      height: 30px;
       justify-content: center;
       align-items: center;
+      font-size: 12px;
     }
     &.on{
-      background-color: #259bff;
+      background-color: $primary;
       border: 0;
       a{
         color: #ffffff;
       }
     }
   }
+  
   @for $i from 2 through 6 {
     &.col-#{$i}{
       grid-template-columns: repeat(#{$i}, 1fr);
@@ -34,6 +36,30 @@
         }
         &:nth-of-type(n+#{$i+1}){
           border-top-width: 0;
+        }
+      }
+    }
+  }
+
+  &.dark{
+    .tab-item{
+      a{
+        background-color: $darkBlue;
+        color: #ffffff;
+      }
+      &.on{
+        border: 1px solid #ababab;
+        a{
+          background-color: $primary;
+          color: #fffc00;
+        }
+      }
+    }
+    @for $i from 2 through 6 {
+      &.col-#{$i}{
+        .tab-item{
+          border: 1px solid #ababab;
+          border-width: 1px 1px 1px 0;
         }
       }
     }
