--- a/src/assets/scss/style_mobile.scss
+++ b/src/assets/scss/style_mobile.scss
@@ -25,3 +25,4 @@
 @import './_partial/edu_board';
 @import './_partial/apply_class';
 @import './_partial/class_sample';
+@import './_partial/notice_board';
