--- a/src/assets/scss/_partial/_layout.scss
+++ b/src/assets/scss/_partial/_layout.scss
@@ -28,6 +28,11 @@
   }
   h4{
     font-size: 15px;
-    margin: 0;
+    margin: 15px 0 5px;
+    .sub-text{
+      font-size: 13px;
+      color: #818181;
+      margin-left: 5px;
+    }
   }
 }
