--- a/src/assets/scss/_partial/_variables.scss
+++ b/src/assets/scss/_partial/_variables.scss
@@ -12,7 +12,7 @@ $boxBorderColor: #d0d0d0;
 $primary: #0047af;
 $green: #00aa0f;
 $yellow: #f1db00;
-$red: #d70000;
+$red: #ff0000;
 $darkBlue: #082361;
 $defaultFontColor: #181818;
 $primaryFontColor: $primary;
