--- a/src/assets/scss/style_mobile.scss
+++ b/src/assets/scss/style_mobile.scss
@@ -20,6 +20,8 @@
 @import './_partial/footer';
 
 // 페이지
+@import './_partial/join';
+@import './_partial/login';
 @import './_partial/info_board';
 @import './_partial/test_schedule';
 @import './_partial/edu_board';
