--- a/src/assets/scss/_partial/_login.scss
+++ b/src/assets/scss/_partial/_login.scss
@@ -1,38 +1,75 @@
-.login{
-    input{
-        width: 100%;
-        height: 59px;
-        border: 1px solid #e7e7e7;
-        border-radius: 5px;
-        margin-bottom: 10px;
-        padding: 20px;
-        &:focus{
-            background-color: $tablethBg;
+.login {
+    .header {
+        margin: 20px 0;
+        text-align: center;
+        img {
+            width: 150px;
         }
     }
-    .btn{
-        margin-top: 25px;
+    h2 {
+        font-size: 18px;
+        margin-top: 0;
+        margin-bottom: 20px;
+        color: #181818;
+        text-align: left;
     }
-    .login-box{
-        width: 520px;
-        margin: 50px auto 100px auto;
-        border: 1px solid $boxBorderColor;
-        padding: 50px;
-        .box-title{
-            text-align: start;
-            margin-bottom: 45px;
-            font-size: 27px;
-            font-weight: 500;
-            .box-subtitle{
-                margin-top: 10px;
-                text-align: start;
-                color: #898989;
-                font-size: 16px;
+    .login-wrap {
+        border: 1px solid #cfcfcf;
+        border-radius: 5px;
+        padding: 30px;
+        max-width: 450px;
+        margin: 0 auto 50px;
+        .sub-text {
+            color: #818181;
+            font-size: 13px;
+        }
+        .input-wrap {
+            input {
+                width: 100%;
+                margin-bottom: 10px;
+                height: 50px;
+            }
+            .cell-phone{
+                display: flex;
+                align-items: center;
+                .input-wrap{
+                  flex: 1 1 25%;
+                  input{
+                    width: 100%;
+                  }
+                }
+                .dash{
+                  padding: 2px;
+                }
+              }
+        }
+        .links {
+            margin-top: 25px;
+            text-align: center;
+            li {
+                position: relative;
+                display: inline-block;
+                padding: 0 20px;
+                font-weight: 700;
+                &:after {
+                    content: "";
+                    display: inline-block;
+                    position: absolute;
+                    right: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    border-right: 1px solid #181818;
+                    height: 10px;
+                }
+                &:last-child {
+                    &:after {
+                        content: none;
+                    }
+                }
             }
         }
-        
     }
-    .password-change{
-
+    .btn.submit {
+        height: 50px;
     }
 }
