--- a/src/assets/scss/_partial/_gnb.scss
+++ b/src/assets/scss/_partial/_gnb.scss
@@ -1,58 +1,40 @@
 .gnb{
-  border-bottom: 1px solid #999999;
-  min-width: calc($containerWidth + 40px);
-  .container{
-    display: flex;
-    position: relative;
-    width: $containerWidth;
-    height: $gnbHeight;
-    margin: auto;
-    padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: $gnbHeight;
+  .prefix, .center, .suffix{
+    flex: 0 0 calc(100% / 3);
+  }
+  .center{
+    display: inline-flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    .registration{
-  
-    }
-    .gosi-logo{
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      .icon-logo{
-        width: 199px;
-        height: 57px;
+    .go-home{
+      width: 100px;
+      img{
+        width: 100%;
       }
     }
-    .btn-group{
-      ul{
-        li{
-          position: relative;
-          display: inline-block;
-          padding: 0 25px;
-          &:after{
-            content: '';
-            display: inline-block;
-            position: absolute;
-            right: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            height: 15px;
-            width: 1px;
-            border-right: 2px solid #999999;
-          }
-          &:last-child{
-            &:after{
-              content: none;
-            }
-          }
-          a{
-            display: inline-block;
-            [class*=icon-]{
-              vertical-align: middle;
-            }
-          }
-        }
-      }
+  }
+  .suffix{
+    display: inline-flex;
+    justify-content: end;
+    align-items: center;
+  }
+  .btn-menu, .btn-login{
+    display: inline-block;
+    .icon-login{
+      width: 15px;
+      height: 15px;
+      vertical-align: middle;
+    }
+    .icon-hamburger{
+      width: 20px;
+      height: 14px;
+      vertical-align: middle;
     }
   }
 }
