--- a/src/assets/scss/_partial/_icon.scss
+++ b/src/assets/scss/_partial/_icon.scss
@@ -8,3 +8,23 @@
   width: 15px;
   height: 15px;
 }
+.icon-login{
+  background-image: url('../../image/icon_login.png');
+  width: 18px;
+  height: 18px;
+}
+.icon-hamburger{
+  background-image: url('../../image/icon_hamburger.png');
+  width: 20px;
+  height: 20px;
+}
+.icon-more{
+  background-image: url('../../image/icon_more.png');
+  width: 12px;
+  height: 12px;
+}
+.icon-contact{
+  background-image: url('../../image/icon_contact.png');
+  width: 52px;
+  height: 49px;
+}
