--- a/src/assets/scss/_partial/_login.scss
+++ b/src/assets/scss/_partial/_login.scss
@@ -28,6 +28,7 @@
                 width: 100%;
                 margin-bottom: 10px;
                 height: 50px;
+                text-align: left;
             }
             .cell-phone{
                 display: flex;
