--- a/src/assets/scss/_partial/_footer.scss
+++ b/src/assets/scss/_partial/_footer.scss
@@ -1,110 +1,38 @@
-footer{
-    min-width: calc($containerWidth + 40px);
-    .supporter-wrap{
-        .supporter{
-            display: flex;
-            justify-content: space-between;
-            width: $containerWidth;
-            margin: 28px auto;
-            .item{
-                flex: 0 0 calc((100% - 130px) / 7);
-                height: 53px;
-                border: 1px solid #cfcfcf;
-                background-position: 50%;
-                background-repeat: no-repeat;
-                background-size: contain;
-                &.item1{
-                    background-image: url('../../image/footer_logo_item1.png');
-                }
-                &.item2{
-                    background-image: url('../../image/footer_logo_item2.png');
-                }
-                &.item3{
-                    background-image: url('../../image/footer_logo_item3.png');
-                }
-                &.item4{
-                    background-image: url('../../image/footer_logo_item4.png');
-                }
-                &.item5{
-                    background-image: url('../../image/footer_logo_item5.png');
-                }
-                &.item6{
-                    background-image: url('../../image/footer_logo_item6.png');
-                }
-                &.item7{
-                    background-image: url('../../image/footer_logo_item7.png');
-                }
-            }
+footer {
+  background-color: #eeeeee;
+  padding: 25px 0;
+  .links {
+    text-align: center;
+    li {
+      display: inline-block;
+      position: relative;
+      margin: 0 15px;
+      &:after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        right: -15px;
+        top: 50%;
+        transform: translateY(-50%);
+        height: 10px;
+        border-right: 1px solid #828282;
+      }
+      &:last-child {
+        &:after {
+          content: none;
         }
-    }
-    .condition-wrap{
-        font-size: 14px;
-        font-weight: bold;
+      }
+      a {
         color: #828282;
-        width: 100%;
-        background-color: $tablethBg;
-        .condition{
-            text-align: center;
-            padding: 22px;
-            .item{
-                display: inline-block;
-                font-size: 14px;
-                color: #828282;
-                margin: 0 5px;
-                &::after{
-                    content: '\00a0\00a0 | ';
-                }
-                &:last-child::after{
-                    content: '';
-                }
-                a{
-                    color: #828282;
-                }
-            }
-        }
+        font-size: 12px;
+      }
     }
-    .company-info-wrap{
-        width: $containerWidth;
-        font-size: 14px;
-        color:#5f5f5f;;
-        margin: 20px auto;
-        height: 100px;
-        .logo{
-            display: inline-block;
-            position: relative;
-            width: 200px;
-            height: 100%;
-            margin-right: 100px;
-            vertical-align: top;
-            margin-top: 20px;
-            .logo-img{
-                display: inline-block;
-                width: 200px;
-                height: 60px;
-                background-image: url('../../image/icon_logo.png');
-                background-size: contain;
-                background-position: 50%;
-                background-repeat: no-repeat;
-            }
-        }
-        .letter-wrap{
-            display: inline-block;
-            width: calc($containerWidth - 304px);
-            .company-info{
-                .item{
-                    display: inline-block;
-                    margin-bottom: 5px;
-                    &::after{
-                        content: ' | ';
-                    }
-                    &:last-child::after{
-                        content: '';
-                    }
-                }
-            }
-            .copy-right{
-                margin-top: 25px;
-            }
-        }
-    }
+  }
+  .info {
+    margin-top: 20px;
+    font-size: 12px;
+    text-align: center;
+    color: #181818;
+    line-height: 20px;
+  }
 }
