--- a/src/assets/scss/_partial/_input.scss
+++ b/src/assets/scss/_partial/_input.scss
@@ -10,14 +10,15 @@ input {
       height: 32px;
       font-size: 15px;
       padding: 10px;
+      width: 150px;
+      &.input-sm {
+        width: 80px;
+      }
+      &.with-button{
+        width: calc(100% - 85px);
+        margin-right: 5px;
+      }
     }
-  }
-  &.input-sm {
-    width: 80px;
-  }
-  &.with-button{
-    width: calc(100% - 85px);
-    margin-right: 5px;
   }
 }
 input[type="file"]{
@@ -54,5 +55,15 @@ select.default-input {
 .cell-phone {
   input {
     text-align: center;
+  }
+}
+textarea{
+  resize: none;
+  &.default-input {
+    background-color: #ffffff;
+    border: 1px solid #e7e7e7;
+    border-radius: 5px;
+    font-size: 15px;
+    padding: 10px;
   }
 }
