--- a/src/assets/scss/_partial/_nav.scss
+++ b/src/assets/scss/_partial/_nav.scss
@@ -1,23 +1,16 @@
-nav.menu{
-  border-bottom: 1px solid #DDDDDD;
-  min-width: calc($containerWidth + 40px);
-  .container{
-    width: $containerWidth;
-    margin: auto;
-    padding: 0 20px;
-    ul{
-      display: flex;
-      li{
-        flex: 1 1 auto;
-        a{
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: $navHeight;
-          &:hover{
-            color: $primaryFontColor;
-          }
-        }
+.nav{
+  height: $navHeight;
+  background-color: #082361;
+  >ul{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: space-around;
+    >li{
+      a{
+        font-size: 15px;
+        color: #ffffff;
       }
     }
   }
