--- a/src/assets/scss/_partial/_radio.scss
+++ b/src/assets/scss/_partial/_radio.scss
@@ -12,7 +12,7 @@
       border-radius: 50%;
       width: 20px;
       height: 20px;
-      transition: border 0.5s;
+      // transition: border 0.5s;
       &:checked {
         border: 7px solid red;
       }
