--- a/src/assets/scss/_partial/_table_default.scss
+++ b/src/assets/scss/_partial/_table_default.scss
@@ -9,7 +9,7 @@
     th {
       height: $tableTdHeight;
       border: 1px solid $tableBorderColor;
-      padding: 5px 10px;
+      padding: 7px;
     }
   }
   &.th-align-l {
@@ -41,6 +41,7 @@
   .cell-phone{
     display: flex;
     align-items: center;
+    max-width: 260px;
     .input-wrap{
       flex: 1 1 25%;
       input{
